force-app/main/default/objects/ESS_Probationary__c.object
<CustomObject>
    <fields>
        <fullName>Approval_History_JSON__c</fullName>
        <label>Approval History JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attitude__c</fullName>
        <label>Attitude</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LackDescipline</fullName>
                    <label>Lack discipline and always create problems</label>
                </value>
                <value>
                    <fullName>NeatAndObey</fullName>
                    <label>Neat and obey supervisor&apos;s order</label>
                </value>
                <value>
                    <fullName>WorkWell</fullName>
                    <label>Work well with colleague and strictly adhere to Company regulations</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CEP_Confirmation_Comment__c</fullName>
        <label>CEP Confirmation Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CEP_Confirmation__c</fullName>
        <label>CEP Confirmation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Confirm</fullName>
                </value>
                <value>
                    <fullName>Propose</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirm_CEP__c</fullName>
        <label>Confirm CEP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Completed_Probation__c</fullName>
        <label>Date Completed Probation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Joined_Company__c</fullName>
        <label>Date Joined Company</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Head_Approve_Date__c</fullName>
        <label>Department Head Approve Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Head_Comment__c</fullName>
        <label>Department Head Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Department_Head_Employee_Id__c</fullName>
        <label>Department Head Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Head_Id__c</fullName>
        <label>Department Head Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Head_Position__c</fullName>
        <label>Department Head Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Head_Reject_Date__c</fullName>
        <label>Department Head Reject Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Head_Reminder__c</fullName>
        <label>Department Head Reminder</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Department_Head__c</fullName>
        <label>Department Head</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_No__c</fullName>
        <label>Document No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name_EN__c</fullName>
        <label>Employee Name EN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_License__c</fullName>
        <label>Engineering License</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AlreadyPossessed</fullName>
                    <label>The incumbent has already possessed the valid license</label>
                </value>
                <value>
                    <fullName>NotYetPossessed</fullName>
                    <label>The incumbent has not yet possessed the valid license</label>
                </value>
                <value>
                    <fullName>NotRequire</fullName>
                    <label>Not Require</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_Skills__c</fullName>
        <label>Knowledge Skills</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insufficient</fullName>
                    <label>Insufficient knowledge/skills to carry out work up to the required standard</label>
                </value>
                <value>
                    <fullName>Sufficient</fullName>
                    <label>Sufficient knowledge/skills to carry out work up to the required standard</label>
                </value>
                <value>
                    <fullName>SufficientBetter</fullName>
                    <label>Sufficient knowledge/skills to carry out work better than the required standard</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probation_Confirmation_Comment__c</fullName>
        <label>Probation Confirmation Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Probation_Confirmation__c</fullName>
        <label>Probation Confirmation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Confirm</fullName>
                    <label>To confirm as regular employee of the Company</label>
                </value>
                <value>
                    <fullName>Terminate</fullName>
                    <label>To terminate employment for the following reason</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Probation_Status__c</fullName>
        <label>Probation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ConfirmedToRegularEmployee</fullName>
                </value>
                <value>
                    <fullName>TerminateEmployee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Propose_CEP__c</fullName>
        <label>Propose CEP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KH400 (JG01)</fullName>
                </value>
                <value>
                    <fullName>KH350 (JG02)</fullName>
                </value>
                <value>
                    <fullName>KH304 (JG03)</fullName>
                </value>
                <value>
                    <fullName>KH264 (JG3.5)</fullName>
                </value>
                <value>
                    <fullName>KH230 (JG04)</fullName>
                </value>
                <value>
                    <fullName>KH200 (JG05)</fullName>
                </value>
                <value>
                    <fullName>KH175 (JG06)</fullName>
                </value>
                <value>
                    <fullName>KH152 (JG07)</fullName>
                </value>
                <value>
                    <fullName>KH132 (JG08)</fullName>
                </value>
                <value>
                    <fullName>KH115 (JG09)</fullName>
                </value>
                <value>
                    <fullName>KH100 (JG10)</fullName>
                </value>
                <value>
                    <fullName>KH87 (JG11)</fullName>
                </value>
                <value>
                    <fullName>KH76 (JG12)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_of_Work__c</fullName>
        <label>Quality of Work</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Below</fullName>
                    <label>Below required standard</label>
                </value>
                <value>
                    <fullName>Meet</fullName>
                    <label>Meet required standard</label>
                </value>
                <value>
                    <fullName>Better</fullName>
                    <label>Better than expectation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity_Of_Work__c</fullName>
        <label>Quantity Of Work</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Learn</fullName>
                    <label>Learn slowly and quantity of work is below expection</label>
                </value>
                <value>
                    <fullName>Meet</fullName>
                    <label>Meet required standard</label>
                </value>
                <value>
                    <fullName>Better</fullName>
                    <label>Better than expectation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reassign_Department_Head_Approve_Date__c</fullName>
        <label>Reassign Department Head Approve Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reassign_Department_Head_Date__c</fullName>
        <label>Reassign Department Head Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reassign_Department_Head_Id__c</fullName>
        <label>Reassign Department Head Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reassign_Department_Head_JSON__c</fullName>
        <label>Reassign Department Head JSON</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reassign_Department_Head_Reminder__c</fullName>
        <label>Reassign Department Head Reminder</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reassign_Department_Head__c</fullName>
        <label>Reassign Department Head</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reassign_Section_Head_Approve_Date__c</fullName>
        <label>Reassign Section Head Approve Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reassign_Section_Head_Date__c</fullName>
        <label>Reassign Section Head Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reassign_Section_Head_Id__c</fullName>
        <label>Reassign Section Head Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reassign_Section_Head_JSON__c</fullName>
        <label>Reassign Section Head JSON</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reassign_Section_Head_Reminder__c</fullName>
        <label>Reassign Section Head Reminder</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reassign_Section_Head__c</fullName>
        <label>Reassign Section Head</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendation_Comment__c</fullName>
        <label>Recommendation Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <label>Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Confirm</fullName>
                    <label>To confirm as regular employee of the Company</label>
                </value>
                <value>
                    <fullName>Terminate</fullName>
                    <label>To terminate employment for the following reason</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reliability__c</fullName>
        <label>Reliability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NeedSupervision</fullName>
                    <label>Need close supervision</label>
                </value>
                <value>
                    <fullName>OccasionalSupervision</fullName>
                    <label>Work well and need only occasional supervision</label>
                </value>
                <value>
                    <fullName>WithoutSupervision</fullName>
                    <label>Work independently without supervision</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Safety_Awareness__c</fullName>
        <label>Safety Awareness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Below</fullName>
                    <label>Below required standard</label>
                </value>
                <value>
                    <fullName>Meet</fullName>
                    <label>Meet required standard</label>
                </value>
                <value>
                    <fullName>Better</fullName>
                    <label>Better than expectation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Section_Head_Approve_Date__c</fullName>
        <label>Section Head Approve Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Section_Head_Comment__c</fullName>
        <label>Section Head Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section_Head_Employee_Id__c</fullName>
        <label>Section Head Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Head_Flow__c</fullName>
        <formula>IF( Section_Head_Id__c != null,false, true)</formula>
        <label>Section Head Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_Head_Id__c</fullName>
        <label>Section Head Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Head_Position__c</fullName>
        <label>Section Head Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Head_Reminder__c</fullName>
        <label>Section Head Reminder</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section_Head__c</fullName>
        <label>Section Head</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Reassigned</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>WaitingForApprovalSectionHead</fullName>
                </value>
                <value>
                    <fullName>WaitingForReassignedSectionHead</fullName>
                </value>
                <value>
                    <fullName>WaitingForApprovalDepartmentHead</fullName>
                </value>
                <value>
                    <fullName>WaitingForReassignedDepartmentHead</fullName>
                </value>
                <value>
                    <fullName>UploadingToPersonalFolder</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>UploadFailed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uploaded_Status__c</fullName>
        <label>Uploaded Status</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>ESS Probationary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRO-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>